# qt-module-supper

./: CMakeLists.txt  README.md
bdlbsc/module/common/: Common.cpp  Common.h  Modules.cpp  Modules.h
bdlbsc/module/component/: DynamicLoadComponent.cpp  DynamicLoadComponent.h
bdlbsc/module/data/: Data.cpp  Data.h  DataDb.cpp  DataDb.h
bdlbsc/module/downloadfile/: DOWNLOAD_CONSTANT.h  DowmloadFileTaskModel.cpp  DowmloadFileTaskModel.h  DownloadClient.cpp  DownloadClient.h  DownloadFileManagerModel.cpp  DownloadFileManagerModel.h  DownloadProxy.cpp  DownloadProxy.h
bdlbsc/module/image/: ImageAsyncImageProvider.h  ImageProvider.cpp  ImageProvider.h  QrCodeImageProvider.h
bdlbsc/module/logger/: Logger.cpp  Logger.h  LoggerTemplate.h
bdlbsc/module/networkserver/: DownloadClient.cpp  DownloadClient.h  HttpClient.cpp  HttpClient.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  NetworkDownloadFile.cpp  NetworkDownloadFile.h  UdpClient.cpp  UdpClient.h  UdpServer.cpp  UdpServer.h
bdlbsc/module/notifications/: manager.h  managerlinux.cpp  managerwin.cpp  wintoastlib.cpp  wintoastlib.h
bdlbsc/module/plugin/: AppPluginManager.cpp  AppPluginManager.h  Plugin.cpp  Plugin.h
bdlbsc/module/qrcode/: QRCodeGenerator.cpp  QRCodeGenerator.h
bdlbsc/module/supper/: IData.h  IMD5Utils.h  IModule.h  IString.h  IStringUtils.h  ISystemUtils.h  IThreadUtils.h  IUUIDUtils.h  IUtils.h  Modules.h
bdlbsc/module/systemfeatures/: Clipboard.cpp  Clipboard.h  ImageClipboard.cpp  ImageClipboard.h
bdlbsc/module/utils/: MD5Utils.cpp  MD5Utils.h  StringUtils.cpp  StringUtils.h  SystemUtils.cpp  SystemUtils.h  ThreadUtils.cpp  ThreadUtils.h  UUIDUtils.cpp  UUIDUtils.h  Utils.cpp  Utils.h
cmake/: Config.cmake.in
sql/: data.sql
